fix: sprite and text alignment

--- a/src/components/item-card.module.css
+++ b/src/components/item-card.module.css
@@ -2,4 +2,5 @@
   display: inline-block;
   width: auto;
   height: 1.125em;
+  vertical-align: sub;
 }
