--- a/src/components/travelers/traveler-card.module.css
+++ b/src/components/travelers/traveler-card.module.css
@@ -22,7 +22,7 @@
   align-self: flex-start;
 }
 
-.sprite {
+.icon {
   width: auto;
   height: 20px;
 }
